--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 
         "mongoose":    "3.8.19",
 
-        "glob":        "4.2.1"
+        "glob":        "4.2.1",
+
+        "lodash":      "2.4.1"
     }
 }
